re PR target/15653 (Gcc 3.4 ICE on valid code)

2004-06-10  Vladimir Makarov  <vmakarov@redhat.com>

	PR target/15653
	* haifa-sched.c (schedule_block): Finish cycle after issuing asm
	insn.

From-SVN: r82942